убраны данные о ТГ

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ venv/
 Orange sky/Orange Sky.docx
 Помощник учителя/Помошник учителя презентация.pptx
 Помощник учителя/Пояснительная записка.docx
+бот для рассписания/tg_config.py
