--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Orange sky/Orange Sky.docx
 Помощник учителя/Помошник учителя презентация.pptx
 Помощник учителя/Пояснительная записка.docx
 бот для рассписания/tg_config.py
+бот для рассписания/client_secret_770813874973-e970c07ecucgqd6kietipl4bsj1jlrut.apps.googleusercontent.com.json
